(env
 (dev
  (env-vars (PGHOST localhost))))

(include_subdirs unqualified)

(executable
 (name flows)
 (public_name flows)
 (preprocess
  (pps ppx_stable ppx_yojson_conv pgocaml_ppx))
 (libraries db_setup pgocaml uri lwt cohttp-lwt-unix sha yojson))

(rule
 (alias run)
 (action
  (run ./flows.exe)))
